styles.css
html,
body {
  padding: 0;
  margin: 0;
  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}

a {
  color: inherit;
  text-decoration: none;
}

/* * {
  box-sizing: border-box;
} */

img {
  max-width: 100%;
  height: auto;
}

h1,
h2,
p,
ul {
  margin: 0;
}

ul {
  padding: 0;
  list-style: none;
}

button {
  padding: 0.5rem 1rem;
  font-weight: bold;
}

#nav {
  /* position the main div to top */
  /* make the main sticky when scrolling */
  position: sticky;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  /* set the height of the main div */
  height: 80px;
  /* set the background color of the main div */
  background-color: #fff;
  /* set the border-bottom of the main div */
  border-bottom: 2px solid #eaeaea;
  /* set the display of the main div */
  display: flex;
  /* set the justify-content of the main div */
  justify-content: center;
  /* set the align-items of the main div */
  align-items: center;
  /* set the padding of the main div */
  padding: 0 30px;
  transition: transform 0.2s ease-in-out;
  margin-bottom: 20px;
}

#title_nav {
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  font-size: large;
  font-weight: 500;
  text-decoration: none;
  transition: transform 0.2s ease-in-out;
  margin: 10px 15px 10px 15px;
}

#textrow {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
  gap: 10px;
  text-decoration: none;
  transition: transform 0.2s ease-in-out;
}
.title:visited {
  color: #000;
}
.active {
  background-color: gainsboro;
  border-radius: 3px;
  opacity: 0.25;
  color: rgb(44, 44, 44);
  text-decoration: none;
}

#link_nav {
  text-decoration: none;
  color: #000;
}
#a_nav {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  text-decoration: none;
  color: #000;
  transition: transform 0.2s ease-in-out;
}
#a:hover {
  z-index: 1;
  background-color: black;
  border-radius: 3px;
  border-width: 12px;
  color: gainsboro;
  cursor: pointer;
  transition: transform 0.2s ease-in-out;
  transform: scale(1.05);
}
.link:visited {
  color: #000;
}

.container {
  min-height: 100vh;
  padding: 0 0.5rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.title a {
  color: #000000;
  text-decoration: none;
}

.title a:hover,
.title a:focus,
.title a:active {
  text-decoration: underline;
}

.p {
  font-family: Arial, Helvetica, sans-serif;
}

.title {
  margin: 0 0 1rem;
  line-height: 1.15;
  font-size: 3.6rem;
}

.title {
  text-align: center;
}

.title,
.description {
  text-align: center;
}

.description {
  margin-top: 20px;
  line-height: 1.5;
  font-size: 1.5rem;
}

.grid {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;

  max-width: 800px;
  margin-top: 3rem;
}

.card {
  margin: 1rem;
  flex-basis: 45%;
  padding: 1.5rem;
  text-align: left;
  color: inherit;
  text-decoration: none;
  border: 1px solid #eaeaea;
  border-radius: 10px;
  transition: color 0.15s ease, border-color 0.15s ease;
}

.card:hover,
.card:focus,
.card:active {
  color: #0070f3;
  border-color: #0070f3;
}

.card h3 {
  margin: 0 0 1rem 0;
  font-size: 1.5rem;
}

.card p {
  margin: 0;
  font-size: 1.25rem;
  line-height: 1.5;
}

.logo {
  height: 1em;
}

@media (max-width: 600px) {
  .grid {
    width: 100%;
    flex-direction: column;
  }
}

.pfp {
  display: flex;
  border-radius: 50%;
  width: 200px;
  height: 200px;
  margin: 0 auto;
}

.a {
  text-decoration: none;
  color: #000000;
}

.icons {
  max-width: 50px;
}

.links_row {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
  gap: 15px;
  text-decoration: none;
}
.link_card {
  max-height: 50;
  border: #c2bdbd;
  border-width: 1px;
  border-style: none;
  border-radius: 6px;
  padding: 15px;
  background-color: #f1f1f1;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  font-weight: 500;
  justify-content: space-between;
  gap: 10px;
}

.link_card:hover {
  cursor: pointer;
  background-color: #cccccc;
}
@media (prefers-color-scheme: dark) {
  .link_card {
    background-color: #0e0e0e;
  }
  .link_card:hover {
    cursor: pointer;
    background-color: #424242;
  }
}

.card {
  background-color: white;
  display: flex;
  flex-direction: column;
  border-radius: 10px;
  border-width: 1px;
  border-style: solid;
  border-color: #e5e7eb;
  align-items: center;
  text-decoration: none;
  max-width: 350px;
  height: 350px;
  transition: transform 0.2s ease-in-out;
}
.card:hover {
  transition: transform 0.2s ease-in-out;
  border-style: solid;
  border-color: #e5e7eb;
  background-color: rgb(245 245 245);
  cursor: pointer;
  transform: scale(1.05);
}

.h3 {
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}
.p {
  padding: 10px;
  color: rgb(85, 85, 85);
}
.link {
  text-decoration: none;
  color: #000;
}
.a {
  text-decoration: none;
  color: #000;
}
.link:visited {
  color: #000;
}

.img_container {
  width: 100%;
  height: 400px;
  overflow: hidden;
}
.img {
  object-fit: cover;
  object-position: center;
  width: 100%;
  height: 100%;
  border-radius: 0px 0px 10px 10px;
}
.img:hover {
  opacity: 0.5;
  cursor: pointer;
}

@media (prefers-color-scheme: dark) {
  .card,
  .svg_icon {
    filter: invert(100%);
  }
  .img,
  .icons,
  .emoji {
    filter: invert(100%);
  }
}

@media (prefers-color-scheme: dark) {
  body,
  h1 {
    color: #fff;
    background-color: #333;
  }
  .svg_icon,
      .Home_link__mt0ji,
      .icons,
      .mr-2,
      iframe /* for recaptcha */ {
    filter: invert(100%) !important;
  }
  .Home_link_card__FkpPR:hover {
    filter: invert(100%) !important;
  }

  .About_description__5NvTY,
  .About_contact__m4JAX {
    filter: invert(100%) !important;
    color: #161515;
  }
}

@media (prefers-color-scheme: dark) {
  .main,
  .textrow,
  .link,
  .a,
  .link:visited {
    filter: invert(100%);
  }
}

/* about css */
#main_about {
  padding: 5rem 0;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
#container_about {
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 10px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
#description_about {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  background-color: #f1f1f1;

  border-radius: 10px;
  padding: 15px;
}

.contact {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  background-color: #f1f1f1;
  border-radius: 10px;
  padding: 15px;
}

#mail_about {
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  color: #ffffff;
  justify-content: space-between;

  gap: 10px;
  max-height: 50;
  border-width: 1px;
  border-style: none;
  border-radius: 6px;
  padding: 15px;
  background-color: gainsboro;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  text-decoration: none;
  color: inherit;
}
#mail_about p {
  color: #ffffff;
}
#mail_about:hover {
  cursor: pointer;
  background-color: #858585;
}
#main_title_about {
  text-align: center;
  color: black;
}

/* cards */
.card {
  background-color: white;
  display: flex;
  flex-direction: column;
  border-radius: 10px;
  border-width: 1px;
  border-style: solid;
  border-color: #e5e7eb;
  align-items: center;
  text-decoration: none;
  max-width: 350px;
  height: 350px;
  transition: transform 0.2s ease-in-out;
}
.card:hover {
  transition: transform 0.2s ease-in-out;
  border-style: solid;
  border-color: #e5e7eb;
  background-color: rgb(245 245 245);
  cursor: pointer;
  transform: scale(1.05);
}

.h3 {
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}
.p {
  padding: 10px;
  color: rgb(85, 85, 85);
}
.link {
  text-decoration: none;
  color: #000;
}
.a {
  text-decoration: none;
  color: #000;
}
.link:visited {
  color: #000;
}

.img_container {
  width: 100%;
  height: 400px;
  overflow: hidden;
}
.img {
  object-fit: cover;
  object-position: center;
  width: 100%;
  height: 100%;
  border-radius: 0px 0px 10px 10px;
}
.img:hover {
  opacity: 0.5;
  cursor: pointer;
}

#main_projects {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  backgroud-color: red;
}

#grid {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  padding: 10px;
  gap: 25px;
}

@media (prefers-color-scheme: dark) {
  .card,
  .svg_icon {
    filter: invert(100%);
  }
  .img,
  .icons,
  .emoji {
    filter: invert(100%);
  }
}

